demo/jaeger/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: jaeger
  labels:
    app: jaeger
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/component: all-in-one
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jaeger
  template:
    metadata:
      labels:
        app: jaeger
        app.kubernetes.io/name: jaeger
        app.kubernetes.io/component: all-in-one
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "16686"
    spec:
        containers:
        -   env:
            - name: COLLECTOR_ZIPKIN_HTTP_PORT
              value: "9411"
            image: jaegertracing/all-in-one:1.16
            name: jaeger
            ports:
              - containerPort: 5775
                protocol: UDP
              - containerPort: 6831
                protocol: UDP
              - containerPort: 6832
                protocol: UDP
              - containerPort: 5778
                protocol: TCP
              - containerPort: 16686
                protocol: TCP
              - containerPort: 9411
                protocol: TCP
            readinessProbe:
              httpGet:
                path: "/"
                port: 14269
              initialDelaySeconds: 5
