demo/jaeger/02-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jaeger
  namespace: jaeger
spec:
  entryPoints:
    - http
  routes:
    - kind: Rule
      match: Host(`jaeger.meetup.containous.tech`)
      services:
        - name: jaeger-query
          port: 16686
      # middlewares:
      #   - name: https-redirect
      #     namespace: traefikee

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jaeger-tls
  namespace: jaeger
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`jaeger.meetup.containous.tech`)
      services:
        - name: jaeger-query
          port: 16686
  tls:
    certResolver: default
